fixed home page  align and positions

--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,10 @@
   --purple-01: #7793f6;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--dark-blue);
+  background-color: var(--bk-pink);
+
+  box-sizing: border-box;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
